--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/jsm-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="version" content="202505052326" />
     <title>Howard</title>
   </head>
   <body>
